# projectGreenhouse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dataServer.py  gallery_AM2302T.html  graphs.py  index.html  install_server.sh  webServer.py
Server/: README.md  dataServer.py  gallery_AM2302H.html  gallery_AM2302T.html  gallery_LM135.html  graphics.py  index.html  mainServer.py  requirements.txt  view_log.html  webServer.py
components/ADC/: ADC.c  ADC.h  CMakeLists.txt
components/AM2302/: AM2302.c  AM2302.h  CMakeLists.txt
components/LCD1602/: CMakeLists.txt  LCD1602.c  LCD1602.h
components/PIDControl/: CMakeLists.txt  PIDControl.c  PIDControl.h
components/PWM/: CMakeLists.txt  PWM.c  PWM.h
components/WiFi/: CMakeLists.txt  WiFi.c  WiFi.h
components/zeroCross/: CMakeLists.txt  zeroCross.c  zeroCross.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
